--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "@radnyx/crystal",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Pokemon Crystal battle simulator.",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
     "build": "rm -f -r ./build/* && tsc"
   },
   "files": [
     "build"
   ],
+  "exports": {
+    ".": "./build/index.js"
+  },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "pixi-sound": "^3.0.5",
     "pixi.js": "^5.3.10",
-    "react": "^17.0.0",
     "typescript": "^4.7.4",
     "@pkmn/sim": "^0.5.11"
   },
   "peerDependencies": {
     "pixi-sound": "^3.0.5",
     "pixi.js": "^5.3.10",
-    "react": "^17.0.0",
     "@pkmn/sim": "^0.5.11"
   },
-  "homepage": "https://github.com/radnyx/battle"
+  "homepage": "https://github.com/radnyx/battle",
+  "keywords": [ "pokemon", "crystal", "simulator" ]
 }
