--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@radnyx/crystal",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Pokemon Crystal battle simulator.",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -25,6 +25,6 @@
     "pixi.js": "^5.3.10",
     "@pkmn/sim": "^0.5.11"
   },
-  "homepage": "https://github.com/radnyx/battle",
+  "homepage": "https://github.com/radnyx/crystal",
   "keywords": [ "pokemon", "crystal", "simulator" ]
 }
