--- a/demo/menus/package.json
+++ b/demo/menus/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "description": "",
     "scripts": {
-      "dev": "cd ../../ && npm run build && cd demo/menus && esbuild ./src/index.ts --bundle --outfile=public/main.js --servedir=public"
+      "dev": "cd ../../ && npm run build && cd demo/menus && esbuild ./src/index.ts --bundle --outfile=../public/menus.js --servedir=../public"
     },
     "author": "",
     "license": "ISC",
