animated wing attack, fire spin

--- a/demo/menus/src/config.json
+++ b/demo/menus/src/config.json
@@ -1,10 +1,10 @@
 {
     "player": {
         "level": 20,
-        "moves": [ "SUNNY DAY", "SOLAR BEAM", "ANCIENTPOWER" ]
+        "moves": [ "FIRE SPIN", "TACKLE" ]
     },
     "opponent": {
         "level": 20,
-        "moves": [ "SUNNY DAY", "SOLAR BEAM" ]
+        "moves": [ "FIRE SPIN", "TACKLE" ]
     }
 }
